# sfwa_ukf

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  sfwa_ukf.repos
benchmark/: CoreBenchmark.cpp  MeasurementVectorBenchmark.cpp  SquareRootCoreBenchmark.cpp  StateVectorBenchmark.cpp
include/: ahrs.h  cukf.h.backup
include/sfwa_ukf/: Config.h  Core.h  Integrator.h  MeasurementVector.h  StateVector.h  Types.h  sfwa_ukf.hpp
patch/: eigen-3.2.8-no-malloc-in-llt.patch
src/: ahrs.cpp  cukf.cpp.backup  main.cpp  sfwa_ukf.cpp
test/: TestCore.cpp  TestDynamicMeasurementVector.cpp  TestFixedMeasurementVector.cpp  TestSquareRootCore.cpp  TestStateVector.cpp  comparisons.h
